--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,8 @@ runtime: python
 api_version: 1
 
 handlers:
-  - url: /oauth2callback
-    script: oauth2callback/appengine.py
-  - url: .*
-    script: main.py
+- url: /oauth2callback
+  script: oauth2client/appengine.py
 
+- url: .*
+  script: main.py
