--- a/app.yaml
+++ b/app.yaml
@@ -7,5 +7,8 @@ handlers:
 - url: /oauth2callback
   script: oauth2client/appengine.py
 
+- url: /static
+  static_dir: static
+
 - url: .*
   script: main.py
